# statistics-server

./: .gitignore  Dockerfile  LICENSE  README.md  pre-commit  pyproject.toml  run_gunicorn.sh  ui_translations.yaml
.github/workflows/: python-app.yml
statistics_server/: app.py  language_handling.py  layout.py  linegraph.py  names.py  numerical_boxplot.py  numerical_boxplot_graph.py  numerical_linegraph.py  plots.py  simple_graph.py  types.py
statistics_server/assets/: hide.js  hide.mjs  popover.mjs  style.css  waitForElement.mjs
tests/: test_language_handling.py  test_layout_factories.py
tests/test_data/: group_metadata.json  ui_translations.yaml
tests/test_data/categorical/: rentown_year.csv  rentown_year_sampreg.csv
tests/test_data/categorical/chronill/: chronill_year.csv  chronill_year_bula_h.csv  chronill_year_bula_h_regtyp.csv  meta.json
tests/test_data/categorical/rentown/: chronill_year_regtyp.csv  meta.json
tests/test_data/numerical/years_injob/: meta.json
