[tool.poetry]
name = "statistics_server"
version = "0.0.1"
description = "Dashboard to display panel-study data"
authors = ["Dominique Seraphin Hansen <dhansen@diw.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.14.1"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.9.0"
black = "24.4.0"
pylint = "^3.1.0"
ruff = "^0.4.0"
pytest =  "^8.1.1"
ipykernel = "^6.29.4"
nbformat = "^5.10.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
